added meta description

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HandiPark - Nice</title>
+  <title>Handipark - Nice</title>
   <base href="/">
-
+  <meta name="description" content="Cartographie des aires de stationnement pour les personnes à mobilité réduite à Nice.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
