added a noscript tag

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
+  <noscript>JavaScript est requis pour afficher cette application.</noscript>
   <app-root></app-root>
 </body>
 </html>
